Thu Dec 05 01:28:44 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Keyboard control for menus :)
  * Press 'm' to open the menu, escape to close it, arrow keys (or hjkl) to
    navigate and space or enter to activate.

Wed Dec 04 23:12:44 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Changed the way the menus work - you don't have to hold the mouse button
    down to keep them open any more. I prefer the old way but that way doesn't
    allow keyboard menu control.

Wed Dec 04 21:30:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Found a couple of case statements without breaks in options.c
  * New default menu, tweaked the menus a little, added code to specify the
    menu bg image border and let the user tweak it.

Sun Nov 24 22:47:43 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Daniel Ashbrook <anjiro@cc.gatech.edu> to bind a key (v) to
    switching between window and fullscreen mode

Sun Oct 20 22:45:01 2002 EDT, Paul Duncan <pabs@pablotron.org>

  * added requested screen-clip option (allows you to disable window size
    clipping based on screen geometry; ie, you can make pathologically large
    windows, assuming you have the images to do so)
  * disabled xinerama geometry check when using feh to set the background.
  * cleaned up spelling and capitalization in menus

Sun Oct 20 20:12:23 2002 EDT, Paul Duncan <pabs@pablotron.org>

  * src/support.c: xinerama bugfix from Jon Bernard <jbernard@roanoke.edu>
  * src/options.c: added 'Use Xinerama' toggle to option menu
  * src/options.c: changed 'Keep http files' to 'Keep HTTP Files'
    (pet peeve ;P)
  * src/options.c: added 'Auto-Zoom' toggle to option menu
  * feh.1: added info about --xinerama flag
  * AUTHORS: added Jon Bernard

Sun Oct 20 14:49:46 2002 EDT, Paul Duncan <pabs@pablotron.org>
  
  * New beveled, off-white background image for menus.  I made it the
    default after consulting with the boss (eg Sue Gilbert).  Tom thinks
    it's okay too.
