@@ -1,3 +1,9 @@
+Thu Dec 05 03:32:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * Got rid of black background for the "draw filename" and zoom display
+    texts. Added a dropshadow to aid visibility when there's no contrast
+    against the background.
+
 Thu Dec 05 01:28:44 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * Keyboard control for menus :)
